--- a/src/index.css
+++ b/src/index.css
@@ -30,6 +30,10 @@ body{
   font-size: 100px;
 }
 
+#sub{
+  font-size: 40px;
+  font-style: italic;
+}
 .construct div:progress{
   display: table-cell;
   text-align: center;
@@ -68,7 +72,7 @@ body{
 .icons a:link{
   display: inline-block;
   margin: 20px;
-  margin-top: 250px;
+  margin-top: 100px;
 }
 
 
