--- a/src/css/index.css
+++ b/src/css/index.css
@@ -3,11 +3,15 @@
 
 
 
-.icons a:link{
+/* .icons a:link{
   display: inline-block;
   margin: 20px;
-  margin-top: 100px;
+  margin-top: 25px;
 }
+next to ea other */
+
+
+
 
 
 code {
