--- a/src/css/blog.css
+++ b/src/css/blog.css
@@ -1,7 +1,13 @@
+h2 {
+    text-align: center;
+    margin: 5rem;
+    font-size: 70px;
+}
 
 .container {
     display: grid;
-    grid-template-columns: auto auto auto auto;
+    grid-template-columns: auto auto auto auto auto;
+    margin-left: 8rem;
 }
 
 .grid {
@@ -18,6 +24,7 @@
     flex-direction: column;
     min-width: 0;
     max-width: 20rem;
+    height: 27rem;
     word-wrap: break-word;
     background-color: #fff;
     background-clip: border-box;
