--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,4 +1,5 @@
 @import './App.css';
+@import './nav.css';
 @import './blog.css';
 /* @import './construction.css'; */
 
@@ -12,7 +13,9 @@
 next to ea other */
 
 
-
+.res {
+  text-align: center;
+}
 
 
 code {
