--- a/src/css/App.css
+++ b/src/css/App.css
@@ -13,6 +13,11 @@
   font-family: 'Playfair Display', serif;
 }
 
+a {
+  text-decoration: none;
+  color: black;
+}
+
 .inline-block {
   display: inline-block;
   margin: 3px;
