--- a/src/css/blog.css
+++ b/src/css/blog.css
@@ -7,7 +7,8 @@ h2 {
 .container {
     display: grid;
     grid-template-columns: auto auto auto auto auto;
-    margin-left: 8rem;
+    text-align: justify;
+    /* margin-left: 8rem; */
 }
 
 .grid {
