--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,7 +1,7 @@
 @import './App.css';
 @import './nav.css';
 @import './blog.css';
-/* @import './construction.css'; */
+@import './construction.css';
 
 
 
