--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,16 +1,9 @@
 @import './App.css';
 @import './nav.css';
 @import './blog.css';
-@import './construction.css';
+@import './contact.css';
+/* @import './construction.css'; */
 
-
-
-/* .icons a:link{
-  display: inline-block;
-  margin: 20px;
-  margin-top: 25px;
-}
-next to ea other */
 
 
 .res {
