--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,8 +1,8 @@
 @import './App.css';
 @import './nav.css';
 @import './blog.css';
-@import './contact.css';
-/* @import './construction.css'; */
+/* @import './contact.css'; */
+@import './construction.css';
 
 
 
