res in middle w/ boarder

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,8 +1,9 @@
 @import './App.css';
 @import './nav.css';
 @import './blog.css';
-/* @import './contact.css'; */
-@import './construction.css';
+@import './resume.css';
+@import './contact.css';
+/* @import './construction.css'; */
 
 
 
