about me I feel comfortable with

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -26,5 +26,10 @@ code {
   top: 50%;
   -ms-transform: translateY(-50%);
   transform: translateY(-50%);
-  text-align: center;
 }
+
+
+/* color: #dda455 !important; gold color */
+/* color: #bc9c22; gold from budgjet mom */
+/* color: #737373; gray for font */
+/* gold, white, gray, navy */
