--- a/src/css/blog.css
+++ b/src/css/blog.css
@@ -5,8 +5,9 @@ h2 {
 }
 
 .container {
+    margin: 20px;
     display: grid;
-    grid-template-columns: auto auto auto auto auto;
+    grid-template-columns: auto auto auto auto;
     text-align: justify;
     /* margin-left: 8rem; */
 }
