--- a/src/css/blog.css
+++ b/src/css/blog.css
@@ -32,17 +32,13 @@ h2 {
     background-clip: border-box;
     border: 1px solid rgba(0, 0, 0, .125);
     border-radius: .25rem;
-    box-shadow: 0 2px 0 rgba(90, 97, 105, 0.11), 0 4px 8px rgba(90, 97, 105, 0.12), 0 10px 10px rgba(90, 97, 105, 0.06), 0 7px 70px rgba(90, 97, 105, 0.1);
     background-color: #fff;
-    border: none;
-    border-radius: 0.625rem;
+    border: none; 
 }
 
 .card-image {
     position: relative;
     min-height: 13.3125rem;
-    border-top-left-radius: 0.625rem;
-    border-top-right-radius: 0.625rem;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -108,3 +104,5 @@ h5 {
     font-size: 15px;
     display: inline;
 }
+
+/* font-family: 'Gotcha', 'Roboto', 'Arial', sans-serif; flatiron sign in font */
