--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,11 +1,11 @@
-@import './App.css';
+/* @import './App.css';
 @import './nav.css';
 @import './home.css';
 @import './blog.css';
 @import './resume.css';
 @import './contact.css';
-@import './project.css';
-/* @import './construction.css'; */
+@import './project.css'; */
+@import './construction.css';
 
 
 
