--- a/src/css/blog.css
+++ b/src/css/blog.css
@@ -1,15 +1,22 @@
+.blogs {
+    background-color: rgb(0, 0, 160);
+}
+
 h2 {
     text-align: center;
     margin: 5rem;
     font-size: 70px;
+    color: #fff;
+    font-family: 'Bad Script', cursive;
 }
 
 .container {
-    margin: 25px;
     display: grid;
-    grid-template-columns: auto auto auto auto;
-    text-align: justify;
-    /* margin-left: 8rem; */
+    height: 100vh;
+    grid-template-columns: repeat(auto-fit, 30rem);
+    justify-content: center;
+    justify-items: center;
+    text-align: left;
 }
 
 .grid {
@@ -21,18 +28,19 @@ h2 {
 }
 
 .card {
-    position: relative;
     display: flex;
     flex-direction: column;
+    position: center;
     min-width: 0;
     max-width: 20rem;
     height: 27rem;
     word-wrap: break-word;
     background-color: #fff;
-    background-clip: border-box;
+    /* background-color: navy; */
+    /* background-color: #bc9c22; */
+    /* background-clip: border-box; */
     border: 1px solid rgba(0, 0, 0, .125);
     border-radius: .25rem;
-    background-color: #fff;
     border: none; 
 }
 
@@ -64,7 +72,9 @@ h2 {
 }
 
 .textfiordblue {
-    color: #3d5170 !important;
+    /* color: #3d5170 !important; */
+    font-family: 'Bad Script', cursive;
+    color: #bc9c22;
     font-size: large;
     text-decoration: none;
 }
@@ -83,7 +93,8 @@ h5 {
     word-wrap: break-word;
     overflow: hidden;
     max-height: 4.6em;
-    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
+    font-family: 'Josefin Slab', serif;
+    /* font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji; */
     font-weight: 500;
     color: #5a6169;
     font-size: 15px;
