--- a/src/css/blog.css
+++ b/src/css/blog.css
@@ -1,5 +1,6 @@
 .blogs {
     background-color: rgb(0, 0, 160);
+    height: 100vh;
 }
 
 h2 {
@@ -76,12 +77,11 @@ h2 {
     font-family: 'Bad Script', cursive;
     color: #bc9c22;
     font-size: large;
-    text-decoration: none;
 }
 
-h5 {
+/* h5 {
     margin-top: 30px;
-}
+} */
 
 .card-body {
     padding: 8px;
@@ -89,10 +89,8 @@ h5 {
 .cardText {
     display: block;
     /* or inline-block */
-    text-overflow: ellipsis;
-    word-wrap: break-word;
     overflow: hidden;
-    max-height: 4.6em;
+    max-height: 8em;
     font-family: 'Josefin Slab', serif;
     /* font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji; */
     font-weight: 500;
