--- a/src/css/blog.css
+++ b/src/css/blog.css
@@ -53,7 +53,7 @@ h2 {
     background-repeat: no-repeat;
 }
 
-.authorimg {
+.authorImg {
     transform: translateY(50%);
     margin-left: 1.5625rem;
     position: absolute;
@@ -61,7 +61,7 @@ h2 {
     display: flex!important;
 }
 
-.authorimg a {
+.authorImg a {
     box-shadow: 0 0 0 0.125rem #fff, 0 0.1875rem 0.4375rem rgba(90, 97, 105, 0.5);
     display: block;
     background-position: center;
@@ -72,10 +72,10 @@ h2 {
     height: 3.1875rem;
 }
 
-.textfiordblue {
-    /* color: #3d5170 !important; */
+.postTitle {
+    color: #3d5170 !important;
     font-family: 'Bad Script', cursive;
-    color:  #bc9c22;
+    /* color:  #bc9c22; */
     font-size: large;
 }
 
@@ -86,17 +86,28 @@ h2 {
 .card-body {
     padding: 8px;
 }
+
 .cardText {
     display: block;
-    /* or inline-block */
     overflow: hidden;
-    max-height: 8em;
-    font-family: 'Josefin Slab', serif;
-    /* font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji; */
+    max-height: 3.5em;
+    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto;
     font-weight: 500;
     color: #5a6169;
     font-size: 15px;
 }
+
+/* .cardText {
+    display: block;
+    /* or inline-block 
+    overflow: hidden;
+    max-height: 8em;
+    font-family: 'Josefin Slab', serif;
+    /* font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji; 
+    font-weight: 500;
+    color: #5a6169;
+    font-size: 15px;
+} */
 
 .grid svg {
     display: inline-block;
