--- a/src/css/blog.css
+++ b/src/css/blog.css
@@ -1,8 +1,3 @@
-/* .blogs {
-    background-color: rgb(0, 0, 160);
-    height: 100vh;
-} */
-
 h2 {
     text-align: center;
     margin: 5rem;
@@ -14,10 +9,13 @@ h2 {
 .container {
     display: grid;
     height: 100vh;
-    grid-template-columns: repeat(auto-fit, 30rem);
     justify-content: center;
     justify-items: center;
     text-align: left;
+}
+
+.auto30{
+    grid-template-columns: repeat(auto-fit, 30rem);
 }
 
 .grid {
@@ -92,7 +90,7 @@ h2 {
     font-size: 15px;
 }
 
-.grid svg {
+/* .grid svg {
     display: inline-block;
     font-size: inherit;
     height: 1em;
@@ -100,12 +98,12 @@ h2 {
     vertical-align: -0.125em;
     width: 0.875em;
     margin-right: 10px;
-}
+} */
 
-.grid span {
+/* .grid span {
     font-weight: 500;
     font-size: 15px;
     display: inline;
-}
+} */
 
 /* font-family: 'Gotcha', 'Roboto', 'Arial', sans-serif; flatiron sign in font */
