--- a/src/css/index.css
+++ b/src/css/index.css
@@ -20,11 +20,11 @@
 body {
   margin: 0px;
 }
-
+/* 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
-}
+} */
 
 .center {
   position: absolute;
