--- a/src/css/App.css
+++ b/src/css/App.css
@@ -3,7 +3,8 @@ h2 {
   margin: 5rem;
   font-size: 70px;
   color: #bc9c22;
-  font-family: 'Bad Script', cursive;
+  font-family: 'Antro Vectra';
+  /* font-family: 'Bad Script', cursive; */
 }
 
 h3 {
