--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,5 +1,6 @@
 @import './App.css';
 @import './nav.css';
+@import './about.css';
 @import './home.css';
 @import './blog.css';
 @import './resume.css';
