--- a/src/css/blog.css
+++ b/src/css/blog.css
@@ -31,7 +31,7 @@
     /* background-color: #bc9c22; */
     /* background-clip: border-box; */
     border: 1px solid rgba(0, 0, 0, .125);
-    border-radius: .25rem;
+    /* border-radius: .25rem; */
     border: none; 
 }
 
