--- a/src/css/index.css
+++ b/src/css/index.css
@@ -48,6 +48,18 @@ code {
   /* box-shadow: 0 2px 0 rgba(90, 97, 105, 0.11), 0 4px 8px rgba(90, 97, 105, 0.12), 0 10px 10px rgba(90, 97, 105, 0.06), 0 7px 70px rgba(90, 97, 105, 0.1); */
 }
 
+.heading {
+  background: white;
+  margin: 0;
+  padding: 20px;
+}
+
+.border {
+  border: #bc9c22;
+  border-style: double;
+}
+/* if change here, also have to change on resume */
+
 /* color: #dda455 !important; gold color */
 /* color: #bc9c22; gold from budgjet mom */
 /* color: #737373; gray for font */
