--- a/src/css/App.css
+++ b/src/css/App.css
@@ -7,9 +7,19 @@ h2 {
   /* font-family: 'Bad Script', cursive; */
 }
 
+h5 {
+  font-size: 23px;
+  margin: 1rem 0rem;
+  /* color: #bc9c22; */
+  color: #000080;
+  font-family: 'Bad Script', cursive;
+}
+
 h3 {
   font-size: 35px;
   margin: 1rem 0rem;
+  color: #bc9c22;
+  font-family: 'Bad Script', cursive;
 }
 
 #nav{
