--- a/src/css/about.css
+++ b/src/css/about.css
@@ -19,7 +19,7 @@
     font-family: 'Josefin Slab', serif;
     font-weight: 500;
     color: #5a6169;
-    font-size: 18px;
+    font-size: 20px;
     width: 30rem;
     margin-left: 10rem;
     text-align: justify;
@@ -31,6 +31,5 @@
     height: auto;
     position: sticky;
     position: -webkit-sticky;
-    top: 30%;
-    
+    top: 30%
 }
