--- a/src/css/home.css
+++ b/src/css/home.css
@@ -20,3 +20,14 @@
     margin: 15px;
     color: #000080;
 }
+
+.hicons{
+    position: absolute;
+    bottom: 30px;
+    right: 10px;
+    width: 50px;
+    display: flex;
+    flex-direction: column;
+    margin: 5px;
+    padding:10px;
+}
