--- a/src/css/App.css
+++ b/src/css/App.css
@@ -9,7 +9,7 @@ h2 {
 
 h5 {
   font-size: 23px;
-  margin: 1rem 0rem;
+  margin: 0;
   /* color: #bc9c22; */
   color: #000080;
   font-family: 'Bad Script', cursive;
