--- a/src/css/about.css
+++ b/src/css/about.css
@@ -20,7 +20,7 @@
     font-weight: 500;
     color: #5a6169;
     font-size: 20px;
-    width: 30rem;
+    width: 40%;
     margin-left: 10rem;
     text-align: justify;
 }
