--- a/src/css/home.css
+++ b/src/css/home.css
@@ -11,7 +11,7 @@
     font-size: 200px;
     margin: 25px;
     color: #bc9c22;
-    font-family: 'Antro Vectra';
+    font-family: 'Antro Vectra', 'Tangerine', cursive, 'Great Vibes', cursive, 'Bad Script', cursive, 'Parisienne', cursive, 'Allura', cursive;
 }
 
 .sub{
