--- a/src/css/index.css
+++ b/src/css/index.css
@@ -6,6 +6,8 @@
 @import './resume.css';
 @import './contact.css';
 @import './project.css';
+@import './media.css';
+
 /* @import './construction.css'; */
 
 /* #root {
